# battle_room

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  todo.txt
gamedata/: CMakeLists.txt  gamehandler.cpp  gamehandler.h  playercontrol.cpp  playercontrol.h  temp_concrete.cpp
gamedata/handlers/: bullets.cpp  bullets.h  players.cpp  players.h  world.cpp  world.h
gamedata/objects/: baseobject.cpp  baseobject.h  baseplayer.cpp  baseplayer.h  baseworld.cpp  baseworld.h  player.cpp  player.h  star.cpp  star.h
graphics/: CMakeLists.txt  animation_player.cpp  animation_player.h  animation_star.cpp  animation_star.h  animation_wall.cpp  animation_wall.h  camera.cpp  camera.h  graphics_code.cpp  graphics_layer.cpp  graphics_layer.h  object_handler.cpp  object_handler.h  player_object.cpp  player_object.h  sdl_animations.cpp  sdl_animations.h  sdl_window.cpp  sdl_window.h  star_object.cpp  star_object.h
retrodeathblade/: CMakeLists.txt  README.md
retrodeathblade/cmake/: FindSDL2_gfx.cmake
retrodeathblade/controller_base/: CMakeLists.txt  tempsettings.cpp  tempsettings.h
retrodeathblade/controller_camera/: cameracontrol.cpp  cameracontrol.h
retrodeathblade/gameobjects/: CMakeLists.txt  basicwall.cpp  star.cpp  texturewall.h
retrodeathblade/mainprogram/: CMakeLists.txt
retrodeathblade/players/: player.cpp  player.h
retrodeathblade/ui_objects/: boundclass.h
src/: CMakeLists.txt  HtmlMenu.cpp  HtmlMenu.h  Logger.cpp  Logger.h  TextureContainer.cpp  TextureContainer.h  TextureManager.h  WebBrowserClient.cpp  WebBrowserClient.h  WebMessageHandler.h  WebRenderer.cpp  WebRenderer.h  alter_world.cpp  alter_world.h  animation.cpp  animation.h  animation_handler.cpp  animation_handler.h  application.cpp  application.h  application_message.cpp  application_message.h  application_message_receiver.cpp  application_message_receiver.h  ball.cpp  ball.h  battleroom.cpp  battleroom_dedicated_server.cpp  binary_stream.cpp  binary_stream.h  boundary.cpp  boundary.h  boundary_set.cpp  boundary_set.h  box_boundary.cpp  box_boundary.h  bullet.cpp  bullet.h  button.cpp  (+149 more)
src/animation/: Animation.cpp  AnimationService.cpp  CMakeLists.txt  animation.cpp  animation.h  animation_handler.cpp  animation_handler.h  animation_notes.cpp  boundary.cpp  boundary.h  boundary_set.cpp  boundary_set.h  box_boundary.cpp  box_boundary.h  circle_boundary.cpp  circle_boundary.h  frame.cpp  frame.h
src/application/: application.cpp  application.h  application_message.cpp  application_message.h  application_message_receiver.cpp  application_message_receiver.h  battleroom.cpp  input.cpp  input.h  input_gatherer.cpp  input_gatherer.h  input_keys.h  inputs.cpp  inputs.h  message.cpp  message.h  message_type.h
src/common/: CMakeLists.txt  animation.cpp  animation_handler.cpp  application_message.cpp  application_message_receiver.cpp  binary_stream.cpp  binary_stream.h  boundary.cpp  boundary_factory.cpp  boundary_set.cpp  box_boundary.cpp  circle_boundary.cpp  color.cpp  drawable_menu.cpp  drawable_object.cpp  drawable_text.cpp  file_utils.cpp  frame.cpp  input.cpp  input_gatherer.cpp  inputs.cpp  location.cpp  logger.cpp  logger.h  object.cpp  orientation.cpp  pixel.cpp  pixel.h  position.cpp  projection1d.cpp  projection1d.h  quaternion.cpp  quaternion.h  rel_pixel.cpp  rel_pixel.h  resource.h  resource_descriptor.cpp  resource_descriptor.h  sat_intersection.cpp  sat_intersection.h  (+11 more)
src/display_window/: display_window.h  drawable_menu.cpp  drawable_menu.h  drawable_object.cpp  drawable_object.h  sdl_display_window.cpp  sdl_display_window.h  sdl_drawable.cpp  sdl_drawable.h  sdl_drawable_image.cpp  sdl_drawable_image.h  sdl_font_manager.cpp  sdl_font_manager.h  sdl_helper_functions.cpp  sdl_helper_functions.h  sdl_texture_manager.cpp  sdl_texture_manager.h  texture_container.cpp  texture_container.h  texture_manager.h
src/engine/: CMakeLists.txt
src/game/: CMakeLists.txt  alter_world.cpp  command.cpp  command_receiver.cpp  game_interface.cpp  game_object.cpp  game_time.cpp  game_world.cpp  local_updating_world.cpp  local_world_updater.cpp  query_world.cpp  query_world_updater.cpp  server_client_factory.cpp  user.cpp  world.cpp
src/graphics/: CMakeLists.txt  camera.cpp  camera_factory.cpp  camera_movement.cpp  moving_camera.cpp  pyramid_camera.cpp  screen_anchor.cpp  sdl_display_window.cpp  sdl_display_window.h  sdl_drawable.cpp  sdl_drawable.h  sdl_drawable_image.cpp  sdl_drawable_text.cpp  sdl_drawable_text.h  sdl_font_manager.cpp  sdl_font_manager.h  sdl_helper_functions.cpp  sdl_helper_functions.h  sdl_texture_manager.cpp  sdl_texture_manager.h  view.cpp  view_position.cpp  z_max_camera.cpp
src/networking/: CMakeLists.txt  client_connection.cpp  client_connection.h  game_server.cpp  host_server_client.cpp  laggy_client.cpp  laggy_client.h  laggy_server.cpp  laggy_server.h  local_server_client.cpp  message.cpp  message_handlers.cpp  network_message_handler.h  network_world_updater.cpp  remote_server_client.cpp  sdl_client.cpp  sdl_client.h  sdl_network_helper.cpp  sdl_network_helper.h  sdl_server.cpp  sdl_server.h  server_client.cpp  server_client_factory.cpp  server_connection.cpp  server_connection.h  user.cpp  user.h  world_updater_factory.cpp
src/tester_programs/: CMakeLists.txt  run_animation.cpp
src/user_interface/: CMakeLists.txt  button.cpp  game_interface.cpp  game_overlay.cpp  interface_factory.cpp  menu.cpp  menu_interface.cpp  pull_down_menu.cpp  screen_anchor.cpp  spatial_element.cpp  view.cpp  view_position.cpp
src/views/: camera.cpp  camera.h  camera_factory.cpp  camera_factory.h  game_interface.cpp  game_interface.h  game_ui_element.cpp  game_ui_element.h  html_menu.cpp  html_menu.h  input_to_cef.cpp  interface_factory.cpp  interface_factory.h  menu.cpp  menu.h  menu_interface.cpp  menu_interface.h  moving_camera.cpp  moving_camera.h  player_select.cpp  player_select.h  pyramid_camera.cpp  pyramid_camera.h  screen_anchor.h  view.cpp  view.h  view_interface.h  (+11 more)
tests/: CMakeLists.txt
userlayer/: CMakeLists.txt  main.cpp  state_machine.cpp  state_machine.h
(+347 files in other folders)
